# ig-pipeline

./: .gitignore  README.md  fix_weka_header.py  parameters_test.sh  parse_svm_output.py  predict.sh  protocol.json  run_svm_example.sh  svm_find_regions.sh  test.sh  train_model.sh  train_model_example.sh
common_lib/: clean_all.sh  compile.sh
common_lib/include/io/: kabat_reader.h  nomenclature.h
common_lib/include/utils/: kmer_generator.h
common_lib/src/: CMakeLists.txt
common_lib/src/io/: CMakeLists.txt  generic_nomenclature.cpp  kabat_reader.cpp  nomenclature.cpp  read.cpp
common_lib/src/tests/: CMakeLists.txt  io.cpp
common_lib/src/utils/: CMakeLists.txt
config/: ig-backend.conf  ig-snooper.conf
contig/: contig.pro
contig-release/: main.cpp  unittest.h
contig-release/contig/: contig.hpp
contig-release/contig/alicont/: alialgo.hpp  alimatrix.hpp
contig-release/contig/kstat/: kstat.hpp
contig-release/contig/trie/: trie.hpp  trie_const_iterator.hpp  trie_cont.hpp  trie_impl.hpp
contig-release/tests/: alicont_test.cpp  fasta_test.cpp  kstat_test.cpp
contig/contig/: contig_iterator.hpp
contig/contig/kstat/: kstat.hpp
contig/contig/trie/: trie.hpp  trie_node.hpp
contig/tests/: annotation_test.cpp
contig/utils/: kseq.h
data/: NUC4.4.txt  NUC_simple.txt  compare_kabat.py  split_fasta_to_learn_and_train_datasets.py
data/germline/human/: DH.fasta  JK.fasta  VH.fasta  VJK_combinations.fasta  VJL_combinations.fasta  VJL_shuffle.fasta  VK.fasta
data/nomenclature/: __init__.py
data/nomenclature/human/: VJK_combinations.kabat  VJL_combinations.kabat
data/train/: VDJH_train.fasta  VDJH_train.kabat
gene_aligner/: clean_all.sh
gene_aligner/include/tasks/: regions_finder.h  task_configurator.h
gene_aligner/src/config/: log4cxx.properties
gene_aligner/src/data_structures/: database.cpp
gene_aligner/src/io/: CMakeLists.txt  output_formatter.cpp
gene_aligner/src/misc/: config_reader.cpp
gene_aligner/src/utils/: CMakeLists.txt  (+2 more)
gene_combinator/: fasta_reader.h  generic_exception.h  main.cpp  reverse_complement.cpp
gene_detector/: compile.sh
ig-backend/: README.md  pom.xml
ig-config/: environmental_variables.sh  ig-backend.conf  ig-snooper.conf
ig-db/: after_sync.sql  create_db.sql
ig-frontend/: README.md  manage.py  requirements.txt  run_pysmtp.sh  test_server.py
ig-frontend/igcad/: settings.py  urls.py  wsgi.py
ig-frontend/igsnooper/: models.py  urls.py  views.py
ig-frontend/igstorage/: models.py  urls.py  views.py
ig-frontend/igtasks/: models.py  urls.py  views.py
ig-frontend/igtools/: fields.py  forms.py  urls.py  views.py
ig-frontend/main/: urls.py  views.py
ig-frontend/messages/: admin.py  models.py  urls.py  views.py
ig-frontend/templates/: base.html  navbar.html
ig-frontend/userprofile/: urls.py  views.py
ig-tools/common_lib/: README.txt  clean_all.sh
ig-tools/common_lib/src/: CMakeLists.txt
ig-tools/common_lib/src/io/: nomenclature.cpp
ig-tools/common_lib/src/model/: CMakeLists.txt  nomenclature.cpp
ig-tools/common_lib/src/tests/: CMakeLists.txt
ig-tools/common_lib/src/utils/: CMakeLists.txt
ig-tools/ig-alicont/: pom.xml
ig-tools/ig-aligner/: run.sh
ig-tools/ig-aligner/gene_aligner/src/tasks/: CMakeLists.txt  regions_finder.cpp
ig-tools/ig-annotator/: pom.xml
ig-tools/ig-combinator/: README.md  clean_all.sh  compile.sh
ig-tools/ig-combinator/src/: CMakeLists.txt
ig-tools/ig-container/: CMakeLists.txt  README.md
ig-tools/ig-container/contig/alicont/: alicont_line.hpp
ig-tools/ig-container/contig/annotation/: annotation_record.hpp
ig-tools/ig-container/contig/trie/: trie_const_iterator.hpp
ig-tools/ig-container/tests/: alicont_test.cpp  contig_test.cpp
ig-tools/ig-container/utils/: fasta_reader.h  read.h
ig-tools/ig-containerS/: pom.xml
ig-tools/ig-primerdesign/: README.md  pom.xml
ig-tools/ig-sangertools/: pom.xml
ig-tools/ig-simplecluster/: clusterize.py  group2table.py  json2table.py  make_report.py  make_table.py  merge_json.py  result.html
ig-tools/ig-snooper/: README.md  pipeline.py  predict.py  train.py
ig-tools/ig-splitter/: simple_splitter.py  simple_splitter_runner.py
ig-tools/ig-splitterS/: mids.txt  mvn_install_local_jars.sh  pom.xml
ig-tools/ig-utils/: cdr_extractor.py  datasplitter.py  test_data_generator.py
ngs-splitter/: test_splitter.py
ngs-splitter/common/: small_algo.py
ngs-splitter/config/: config.py
ngs-splitter/splitter/: configuration.py  svm_split.py
papers/regions/: paper.aux  paper.tex
pkgbuild/: build_all.sh  install_all.sh
pkgbuild/ig-backend/: PKGBUILD  build_package.sh  ig-backend.service
pkgbuild/ig-config/: PKGBUILD  build_package.sh
pkgbuild/ig-frontend/: PKGBUILD  build_package.sh  ig-frontend.service
pkgbuild/ig-tools/: PKGBUILD  build_package.sh
server/: ig_pipe  manage.py
server/igpipe/: settings.py  urls.py  wsgi.py
server/polls/: admin.py  models.py
splitter/aig/: aig.py
splitter/classifier/: dataset.py
splitter/common/: alignment_algo.py
splitter/config/: splitter.conf.json
splitter/splitter/: splitter.py
svm_data_generator/: clean_all.sh  compile.sh
svm_data_generator/src/: CMakeLists.txt  main.cpp
test_data/: vh.fa
tools/common_lib/: compile.sh
tools/common_lib/src/tests/: CMakeLists.txt  io.cpp  utils.cpp
tools/ig-aligner/: run.sh
tools/ig-aligner/gene_aligner/src/: CMakeLists.txt  main.cpp
tools/ig-aligner/gene_aligner/src/data_structures/: CMakeLists.txt
tools/ig-aligner/gene_aligner/src/tasks/: CMakeLists.txt  task_configurator.cpp
tools/ig-aligner/gene_aligner/src/test_data/: 454.fasta
tools/ig-aligner/gene_detector/src/: CMakeLists.txt  main.cpp
tools/ig-aligner/gene_detector/src/misc/: CMakeLists.txt  config_reader.cpp
tools/ig-aligner/gene_detector/src/utils/: CMakeLists.txt
tools/ig-container/: main.cpp
tools/ig-snooper/: compare_kabat.py  fix_weka_header.py  parse_svm_output.py  predict.py  predict.sh  split_fasta_to_learn_and_train_datasets.py  train.py  train_model.sh  train_model_example.sh
tools/ig-splitter/: run.py  simple_splitter.py
(+332 files in other folders)
